Learning Repo update push

--- a/ubuntu.html
+++ b/ubuntu.html
@@ -23,8 +23,8 @@
   </div>
 
   <div>
-    <h2>This page is for ubuntu things.</h2>
-    <p>Resize the browser window to see how it works.</p>
+    <h2>This page is for ubuntu things. </h2>
+    <p>Updating text to learn push changes to Repo.</p>
   </div>
 
   <script>
