Active Nav tab color code changes

--- a/youtube.html
+++ b/youtube.html
@@ -12,11 +12,11 @@
 
 <body>
 	<div class="topnav" id="myTopnav">
-		<a href="index.html" class="active">Home</a>
+		<a href="index.html">Home</a>
 		<!-- <a href="#news">News</a> -->
 		<a href="ubuntu.html">Ubuntu</a>
-		<a href="youtube.html">Youtube</a>
-		<a href="#about">About</a>
+		<a class="active" href="youtube.html">Youtube</a>
+		<a href="about.html">About</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			<i class="fa fa-bars"></i>
 		</a>
