--- a/about.html
+++ b/about.html
@@ -8,24 +8,23 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
   <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <!-- <a href="#news">News</a> -->
-    <a class="active" href="ubuntu.html">Ubuntu</a>
+    <a href="ubuntu.html">Ubuntu</a>
     <a href="youtube.html">Youtube</a>
-    <a href="about.html">About</a>
+    <a class="active" href="about.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
 
   <div>
-    <h2>This page is for ubuntu things. </h2>
-    <p>Updating text to learn push changes to Repo.</p>
+    <h2>About Page</h2>
+    <p>Some Random text</p>
   </div>
 
   <script>
